--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -8,10 +8,10 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@components/*": ["src/components/*"],
-      "@layout/*": ["src/components/layout/*"],
-      "@pages/*": ["src/pages/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@layout/*": ["./src/components/layout/*"],
+      "@pages/*": ["./src/pages/*"]
     },
 
     /* Bundler mode */
