--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
