--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,11 +2,19 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/cron.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/cron",
+      "dest": "api/cron.js"
+    },
     {
       "src": "/(.*)",
       "dest": "index.js"
